Add HEIC to PDFBox image converter
Co-authored-by: mszlezak-beep <mszlezak-beep@users.noreply.github.com>